--- a/js/列表分页.md
+++ b/js/列表分页.md
@@ -1,4 +1,5 @@
-function getData(page) {
+
+    function getData(page) {
     $.ajax({
         type: "get",
         url: "http://192.168.1.108/sql.php?page=" + page,
@@ -12,7 +13,7 @@ function getData(page) {
                 str += '<li class="col-md-4 dynamic_list"><a href="article_details.html"><img src="src/images/h-01.jpg" alt=""><h5>' + data.content[i].title + '</h5><p>xxxxxxxxxxxxxxxxx</p></a></li>';
             }
             $(".dynamicListMain").html(str);
-
+    
             var pageNum = Math.ceil(data.count / 6); //获取得到的数据页数
             var curPage = page; //获取当前页
             var result = "";
@@ -48,34 +49,37 @@ function getData(page) {
             alert("请求失败");
         }
     });
-}
+    }
+    getData(1);
+#### 上一页点击事件
 
-
-
-getData(1);
-/**
- * 上一页点击事件
- */
+```
 function preEvent() {
-    var curPage = $("#pre").attr("data-num");
-    console.log(curPage)
-    if (curPage <= 1) {
-        $(this).attr('disabled', true);
-    } else {
-        curPage = parseInt(curPage) - 1;
-        getData(curPage);
-    }
+
+var curPage = $("#pre").attr("data-num");
+
+console.log(curPage)
+
+if (curPage <= 1) {
+
+$(this).attr('disabled', true);
+} else {
+curPage = parseInt(curPage) - 1;
+getData(curPage);
 }
-/**
- * 下一页点击事件
- */
+}
+```
+#### 下一页点击事件
+
+```
 function nextEvent() {
-    var curPage = $("#next").attr("data-num");
-    var pageNum = $("#pageNum").text();
-    if (curPage >= pageNum) {
-        $(this).attr('disabled', true);
-    } else {
-        curPage = parseInt(curPage) + 1;
-        getData(curPage);
-    }
+var curPage = $("#next").attr("data-num");
+var pageNum = $("#pageNum").text();
+if (curPage >= pageNum) {
+$(this).attr('disabled', true);
+} else {
+curPage = parseInt(curPage) + 1;
+getData(curPage);
 }
+}
+```
