--- a/js/常用代码.md
+++ b/js/常用代码.md
@@ -326,8 +326,9 @@ var createTimeStr = createTimeObj.format("yyyy-MM-dd hh:mm:ss");
         });
        }
 
-
 ### 深拷贝
+
+浅拷贝只复制指向某个对象的指针，而不复制对象本身，新旧对象还是共享同一块内存。但深拷贝会另外创造一个一模一样的对象，新对象跟原对象不共享内存，修改新对象不会改到原对象。
 
     function deepClone(values) {
     var copy;
@@ -564,7 +565,7 @@ var createTimeStr = createTimeObj.format("yyyy-MM-dd hh:mm:ss");
           // Return the wrapper function.
           return wrapper;
         };
-        
+
 
     ​
 
