--- a/js/数组&&字符串.md
+++ b/js/数组&&字符串.md
@@ -1,19 +1,3 @@
-### 数组新方法
-
-Array.from():将一个数组或者类数组变成数组，会复制一份（浅拷贝）
-
-Array.of():将一组数值转化为数组；
-
-copyWithin():Array.prototypeof.copywithin(target,start=0,end=this.length)覆盖目标的下标，开始的下标，结束的后一个的下标，原数组改变
-
-fill()：填充数组，改变数组Array.prototype.fill(value,start,end=this.length);
-
-
-
-
-
-
-
 ### 判断是否数组
 
 ```
@@ -99,14 +83,310 @@ array.some(callback[,thisArg])
 
 
 
+## 常用字符串
+
+### chartAt()
+
+用来获取指定位置的字符串；
+
+### sub()
+
+把字符串显示为下标
+
+### indexOf()
+
+indexOf()用来检索指定的字符串值在字符串中首次出现的位置。它可以接收两个参数，第一个参数表示要查找的子字符串，第二个参数表示查找的开始位置，省略的话则从开始位置进行检索。
+
+### lastindexOf()
+
+返回的是一个指定的子字符串值最后出现的位置，其检索顺序是从后向前。
+
+### search()
+
+search()方法用于检索字符串中指定的子字符串，或检索与正则表达式相匹配的子字符串。它会返回第一个匹配的子字符串的起始位置，如果没有匹配的，则返回-1
+
+### match()
+
+match()方法可在字符串内检索指定的值，或找到一个或多个正则表达式的匹配。如果参数中传入的是子字符串或是没有进行全局匹配的正则表达式，那么match()方法会从开始位置执行一次匹配，如果没有匹配到结果，则返回null。否则则会返回一个数组，该数组的第0个元素存放的是匹配文本，除此之外，返回的数组还含有两个对象属性index和input，分别表示匹配文本的起始字符索引和stringObject 的引用(即原字符串)。
+
+### substring()
+
+substring()是最常用到的字符串截取方法，它可以接收两个参数(参数不能为负值)，分别是要截取的开始位置和结束位置，它将返回一个新的字符串，其内容是从start处到end-1处的所有字符。若结束参数(end)省略，则表示从start位置一直截取到最后
+
+### slice()
+
+slice()方法与substring()方法非常类似，它传入的两个参数也分别对应着开始位置和结束位置。而区别在于，slice()中的参数可以为负值，如果参数是负数，则该参数规定的是从字符串的尾部开始算起的位置。也就是说，-1 指字符串的最后一个字符。
+
+### substr()
+
+substr()方法可在字符串中抽取从start下标开始的指定数目的字符。其返回值为一个字符串，包含从 stringObject的start（包括start所指的字符）处开始的length个字符。如果没有指定 length，那么返回的字符串包含从start到stringObject的结尾的字符。另外如果start为负数，则表示从字符串尾部开始算起。
+
+### replace()
+
+replace()方法用来进行字符串替换操作，它可以接收两个参数，前者为被替换的子字符串（可以是正则），后者为用来替换的文本。如果第一个参数传入的是子字符串或是没有进行全局匹配的正则表达式，那么replace()方法将只进行一次替换（即替换最前面的），返回经过一次替换后的结果字符串。如果第一个参数传入的全局匹配的正则表达式，那么replace()将会对符合条件的子字符串进行多次替换，最后返回经过多次替换的结果字符串。
+
+### split()
+
+split()方法用于把一个字符串分割成字符串数组。第一个参数separator表示分割位置(参考符)，第二个参数howmany表示返回数组的允许最大长度(一般情况下不设置)
+
+正则分割
+
+```
+var str = 'a1b2c3d4e';
+console.log(str.split(/\d/)); //返回["a", "b", "c", "d", "e"]
+```
+
+### toLowerCase()和toUpperCase()
+
+大小写互转
+
+## ES6新增
+
+### repeat()
+
+参数：*数字（表示重复的次数）*
+
+### includes()
+
+返回布尔值，表示是否找到了参数字符串
+
+### startsWith()
+
+返回布尔值，表示参数字符串是否在源字符串的头部
+
+### endsWith()
+
+返回布尔值，表示参数字符串是否在源字符串的尾部
+
+### padStart()，padEnd() 
+
+第一个参数是指定字符串最小长度，第二个参数用来补全的字符串
 
 
 
+## 常用数组方法
+
+### map()
+
+**var new_array = array.map (function(value,index,array){ },thisArg);**
+
+- 遍历数组，能够将数组转化为一个新的数组，新数组的值由map方法回调函数的返回值决定。
+
+- 回调函数的第一个参数是数组的值，第二个参数是索引,第三个参数是被调用的数组。thisArg可选，执行 callback函数时 使用的this值。
+
+- 如果 thisArg 参数有值，则每次 callback 函数被调用的时候，this都会指向thisArg参数上的这个对象。如果省略了 thisArg参数,或者赋值为null或undefined，则 this 指向全局对象 。
+
+- 返回值是新的数组
+
+  eg: 
+
+  let numbers = [1, 5, 10, 15];
+
+   let roots = numbers.map(function(x) {     
+
+   return x * 2;   
+
+  });
+
+  ```
+  var str = '12345';
+  Array.prototype.map.call(str, function(x) {
+    return x;
+  }).reverse().join(''); 
+
+  // Output: '54321'
+  ```
 
 
 
+### forEach
+
+array.forEach(function(value,index,array){}，thisArg);
+
+- 遍历数组，跑起来就停不下来，调用就会遍历整个数组，无法中断循环
+- 回调函数的第一个参数表示数组中的每一个元素，第二个表示索引号,第三个表示正在操作的数组，可选
+- 返回值undefined
+- ​
+
+### every
+
+**array.every(function(value,index){});**
+
+- 根据当前回调函数的返回值决定是否进行下一次循环
+  - 如果没有return true，则只是执行一次
+  - 回调函数的返回值为true，继续循环
+  - 返回值是false，停止循环
+
+第一个参数是数组中的每一个元素 第二个参数表示索引号
 
 
 
+### array.some(callback[,thisArg])
+
+- callback 被调用时传入三个参数：元素的值，元素的索引，被遍历的数组
+
+- *thisArg参数,将会把它传给被调用的callback，作为this 值。否则，在非严格模式下将会是全局对象，严格模式下是undefined*
+
+- 数组中如果有一个满足条件，返回true，否则返回false
+
+  ​
+
+### filter
+
+**var new_array = arr.filter(callback[, thisArg])**
+
+- 判断数组中的每一项是否都满足条件，所有满足条件的则返回新数组
+- callback 用来测试数组的每个元素的函数。调用时使用参数 (element, index, array)
+  返回true表示保留该元素（通过测试），false则不保留
+- thisArg 可选，执行callback时的用于this的值
 
 
+
+### 扩展运算符
+
+将数组转为逗号分割的参数序列
+
+1、复制数组
+
+eg：const a1 = [1, 2];
+
+// 写法一const a2 = [...a1];
+
+// 写法二const [...a2] = a1;
+
+2、合并数组
+
+```
+var arr1 = ['a', 'b'];
+var arr2 = ['c'];
+var arr3 = ['d', 'e'];
+[...arr1, ...arr2, ...arr3]
+// [ 'a', 'b', 'c', 'd', 'e' ]
+```
+
+3、与解构赋值结合
+
+eg：
+
+```
+const [first, ...rest] = [1, 2, 3, 4, 5];
+first // 1
+rest  // [2, 3, 4, 5]
+```
+
+
+
+4、字符串：
+
+```
+[...'hello']
+// [ "h", "e", "l", "l", "o" ]
+```
+
+5、实现iterator接口的对象
+
+6、Map和Set结构，Generator函数
+
+eg:
+
+```
+let map = new Map([
+  [1, 'one'],
+  [2, 'two'],
+  [3, 'three'],
+]);
+
+let arr = [...map.keys()]; // [1, 2, 3]
+```
+
+
+
+### Array.form()
+
+将类数组的对象和可遍历的对象转化为真正的数组；
+
+eg:
+
+```
+let arrayLike = {
+    '0': 'a',
+    '1': 'b',
+    '2': 'c',
+    length: 3
+};
+let arr2 = Array.from(arrayLike); // ['a', 'b', 'c']
+```
+
+
+
+### Arrof.of()
+
+将一组数值转换为数组
+
+
+
+### copywithin()
+
+在当前数组内部，将指定位置的成员复制到其他位置（会覆盖原有成员），然后返回当前数组。也就是说，使用这个方法，会修改当前数组。
+
+```
+Array.prototype.copyWithin(target, start = 0, end = this.length)
+```
+
+接受三个参数。
+
+- target（必需）：从该位置开始替换数据。如果为负值，表示倒数。
+- start（可选）：从该位置开始读取数据，默认为 0。如果为负值，表示倒数。
+- end（可选）：到该位置前停止读取数据，默认等于数组长度。如果为负值，表示倒数。
+
+这三个参数都应该是数值，如果不是，会自动转为数值。
+
+
+
+### find()
+
+用于找出第一个符合条件的数组成员。它的参数是一个回调函数，所有数组成员依次执行该回调函数，直到找出第一个返回值为`true`的成员，然后返回该成员。如果没有符合条件的成员，则返回`undefined`。
+
+eg:
+
+```
+[1, 5, 10, 15].find(function(value, index, arr) {
+  return value > 9;
+}) // 10
+```
+
+### findindex()
+
+返回第一个符合条件的数组成员的位置，如果所有成员都不符合条件，则返回`-1`。
+
+这两个方法都可以接受第二个参数，用来绑定回调函数的`this`对象。
+
+```
+function f(v){
+  return v > this.age;
+}
+let person = {name: 'John', age: 20};
+[10, 12, 26, 15].find(f, person);    // 26
+```
+
+### fill()
+
+`fill`方法使用给定值，填充一个数组。
+
+`fill`方法还可以接受第二个和第三个参数，用于指定填充的起始位置和结束位置
+
+
+
+### incliudes()
+
+示某个数组是否包含给定的值，与字符串的`includes`方法类似
+
+eg:
+
+```
+[1, 2, 3].includes(2)     // true
+[1, 2, 3].includes(4)     // false
+[1, 2, NaN].includes(NaN) // true
+```
+
+方法的第二个参数表示搜索的起始位置，默认为`0`。如果第二个参数为负数，则表示倒数的位置，如果这时它大于数组长度（比如第二个参数为`-4`，但数组长度为`3`），则会重置为从`0`开始。
