--- a/js/数组&&字符串.md
+++ b/js/数组&&字符串.md
@@ -162,6 +162,12 @@ console.log(str.split(/\d/)); //返回["a", "b", "c", "d", "e"]
 
 第一个参数是指定字符串最小长度，第二个参数用来补全的字符串
 
+### parseInt()
+
+解析字符串并返回一个整数
+
+第一个参数是要被解析的字符串，第二个参数是解析的数字的基数；如果省略或为0 则按10为基础来解析。返回解析后的数字
+
 
 
 ## 常用数组方法
