--- a/js/数组&&字符串.md
+++ b/js/数组&&字符串.md
@@ -307,6 +307,8 @@ let arr = [...map.keys()]; // [1, 2, 3]
 
 
 
+伪数组（类数组）：无法直接调用数组方法或期望length属性有什么特殊的行为，但仍可以对真正数组遍历方法来遍历它们。典型的是函数的argument参数，还有像调用getElementsByTagName,document.childNodes之类的,它们都返回NodeList对象都属于伪数组。可以使用Array.prototype.slice.call(fakeArray)将数组转化为真正的Array对象。
+
 ### Array.form()
 
 将类数组的对象和可遍历的对象转化为真正的数组；
