--- a/js/面试记录.md
+++ b/js/面试记录.md
@@ -39,65 +39,91 @@ function render() {
 
 ###js 统计一个字符串出现频率最高的字母/数字
 
-let str = 'asdfghjklaqwertyuiopiaia';
+```
+      let str = 'asdfghjklaqwertyuiopiaia';
 
 const strChar = str => {
-​    let string = [...str],
-​        maxValue = '',
-​        obj = {},
-​        max = 0;
-​    string.map(value => {
-​        obj[value] = obj[value] == undefined ? 1 : obj[value] + 1
-​        if (obj[value] > max) {
-​            max = obj[value]
-​            maxValue = value
-​        }
-​    })
+
+let string = [...str],
+
+maxValue = '',
+
+      obj = {},
+
+        max = 0;
+
+    string.map(value => {
+
+        obj[value] = obj[value] == undefined ? 1 : obj[value] + 1
+
+        if (obj[value] > max) {
+
+            max = obj[value]
+
+            maxValue = value
+
+        }
+
+    })
+
 return maxValue;
+
 }
+
 console.log(strChar(str))    // a
+
+
+
+```
 
 
 
 ###冒泡排序
 
-let arr = [43, 32, 1, 5, 9, 22];
+l
+
+```
+et arr = [43, 32, 1, 5, 9, 22];
 const sort = arr => {
-​    let res = []
-​    let temp
-​    arr.map((v, i) => {
-​        for (var j = i + 1; j < arr.length; j++) {
-​            if (arr[i] > arr[j]) {
-​                temp = arr[i];
-​                arr[i] = arr[j];
-​                arr[j] = temp;
-​            }
-​        }
-​    })
-​    return arr
+    let res = []
+    let temp
+    arr.map((v, i) => {
+        for (var j = i + 1; j < arr.length; j++) {
+           if (arr[i] > arr[j]) {
+                temp = arr[i];
+                arr[i] = arr[j];
+                arr[j] = temp;
+            }
+        }
+    })
+    return arr
 }
 console.log(sort(arr))  // [1, 5, 9, 22, 32, 43]；
+```
 
 
 
 ### 数组中的最大差值
 
+```
 let arr = [23, 4, 5, 2, 4, 5, 6, 6, 71, -3];
 const difference = arr => {
-​    let min = arr[0],
-​        max = 0;
-​    arr.map(value => {
-​        if (value < min) min = value
-​        if (value > max) max = value
-​    })
-​    return max - min ;
+    let min = arr[0],
+        max = 0;
+    arr.map(value => {
+       if (value < min) min = value
+        if (value > max) max = value
+    })
+    return max - min ;
 }
 console.log(difference(arr))  // 74
+```
 
 
 
 ### 返回元素出现的位置
 
+```
 var indices = [];
 var array = ['a', 'b', 'a', 'c', 'a', 'd'];
 var element = 'a';
@@ -112,6 +138,7 @@ while (idx != -1) {
 }
 console.log(indices);
 // [0, 2, 4]
+```
 
 
 
@@ -123,61 +150,67 @@ console.log(Object.is(NaN,NaN));
 
 ### 类的定义
 
+```
 class Parent {
-​    constructor(name) {
-​        this.name = name;
-​    }
-​    getName(){
-​        return this.name
-​    }
+    constructor(name) {
+        this.name = name;
+    }
+    getName(){
+        return this.name
+    }
 }
 let p = new Parent('zfpx');
 console.log(p.getName())
+```
 
 
 
 ### 静态属性通过类来调用
 
+```
 class Parent {
-​    constructor(name) {
-​        this.name = name;
-​        return {}
-​    }
-​    static a() {
-​        console.log('abc')
-​    }
-​    getName() {
-​        return this.name
-​    }
+    constructor(name) {
+        this.name = name;
+        return {}
+    }
+    static a() {
+        console.log('abc')
+    }
+    getName() {
+        return this.name
+    }
 }
 Parent.a();
+```
 
 
 
 ### 类的继承
 
+```
 class Parent {
-​    constructor(name) {
-​        this.name = name;
-​    }
-​    static a() {
-​        console.log('abc')
-​    }
-​    getName() {
-​        return this.name
-​    }
+    constructor(name) {
+        this.name = name;
+    }
+    static a() {
+        console.log('abc')
+    }
+    getName() {
+        return this.name
+    }
 }
 class Child extends Parent {
-​    constructor(name, age) {
-​        super(name);
-​        this.age = age
-​    }
-​    getAge() {
-​        return this.age
-​    }
+    constructor(name, age) {
+        super(name);
+        this.age = age
+    }
+    getAge() {
+        return this.age
+    }
 }
 let c = new Child('zfpx','9');
 console.log(c.getName())
+```
 
 
 
@@ -210,19 +243,17 @@ function a(x){
           console.log(x+y+(++tem));
      }
 }
-```
-
 for(var i=0;i<10;i++){
 
-​	(function(i){
+	(function(i){
 
-​	alert(i);
+	alert(i);
 
 })(i)
 
 }
 
-
+```
 
 # 程序输出：
 
@@ -350,6 +381,19 @@ function B(name,id){
 let set = new Set([9,2,2,3,1,1]),
     array = [...set];
  console.log(array) //  9 2 3 1 
+ 
+ 二、
+ function unique1(array) {
+    var n = [];
+    //一个新的临时数组
+    //遍历当前数组 
+    for (var i = 0; i < array.length; i++) {
+        //如果当前数组的第i已经保存进了临时数组，那么跳过，
+        //否则把当前项push到临时数组里面 
+        if (n.indexOf(array[i]) == -1) n.push(array[i]);
+    };
+    return n;
+};
 ```
 
 
@@ -388,14 +432,16 @@ console.log(num) // 5
 
 ### js千分位分割
 
+```
 function commafy(num) { 
    num = num + ''; 
    var reg = /(-?d+)(d{3})/; 
    if (reg.test(num)) { 
-​       num = num.replace(reg, '$1,$2');
+      num = num.replace(reg, '$1,$2');
    } 
   return num;
 }
+```
 
 
 
@@ -433,6 +479,31 @@ parent.show();//1 [1, 2, 1] 5
 child1.show();//5 [1, 2, 1, 11, 12] 5
 child2.show();//6 [1, 2, 1, 11, 12] 5
 ```
+
+
+
+### promise
+
+- pending: 初始状态, 非 fulfilled 或 rejected.
+- fulfilled: 成功的操作.
+- rejected: 失败的操作.
+
+```
+var promise = new Promise((resolve,reject) => {
+    if (操作成功) {
+        resolve(value)
+    } else {
+        reject(error)
+    }
+})
+promise.then(function (value) {
+    // success
+},function (value) {
+    // failure
+})
+```
+
+
 
 
 
