--- a/js/面试记录.md
+++ b/js/面试记录.md
@@ -217,7 +217,7 @@ console.log(c.getName())
 ### js实现trim清除空格
 
 	function trim(str){	
-	return str.replace(/^\s*|\s*$/g,'');
+	  return str.replace(/^\s*|\s*$/g,'');
 	}
 
 
@@ -418,7 +418,7 @@ document.write(patt1.test("The best things in life are free"));   //true
 ### 计算元素出现次数
 
 ```
-var reg = /abc/g
+var reg = /a/g
 var str = 'abcabcabcabcabc'
 var num = 0;
 var match = null;
@@ -433,14 +433,9 @@ console.log(num) // 5
 ### js千分位分割
 
 ```
-function commafy(num) { 
-   num = num + ''; 
-   var reg = /(-?d+)(d{3})/; 
-   if (reg.test(num)) { 
-      num = num.replace(reg, '$1,$2');
-   } 
-  return num;
-}
+  var commafy = (num) => {
+        return num && num.toString().replace(/(^|\s)\d+/g, (m) => m.replace(/(?=(?!\b)(\d{3})+$)/g, ','))
+    }
 ```
 
 
@@ -502,6 +497,26 @@ promise.then(function (value) {
     // failure
 })
 ```
+
+
+
+### 比较typeof与instanceof？
+
+相同点：JavaScript 中 typeof 和 instanceof 常用来判断一个变量是否为空，或者是什么类型的。
+
+typeof的定义和用法：返回值是一个字符串，用来说明变量的数据类型。
+
+细节：
+
+(1)、typeof 一般只能返回如下几个结果：number,boolean,string,function,object,undefined。
+
+(2)、typeof 来获取一个变量是否存在，如 if(typeof a!="undefined"){alert("ok")}，而不要去使用 if(a) 因为如果 a 不存在（未声明）则会出错。
+
+(3)、对于 Array,Null 等特殊对象使用 typeof 一律返回 object，这正是 typeof 的局限性。
+
+Instanceof定义和用法：instanceof 用于判断一个变量是否属于某个对象的实例。
+
+
 
 
 
