--- a/js/面试记录.md
+++ b/js/面试记录.md
@@ -35,8 +35,6 @@ function render() {
 })();
 ```
 
-
-
 ###js 统计一个字符串出现频率最高的字母/数字
 
 ```
@@ -76,11 +74,7 @@ console.log(strChar(str))    // a
 
 ```
 
-
-
 ###冒泡排序
-
-l
 
 ```
 et arr = [43, 32, 1, 5, 9, 22];
@@ -101,8 +95,6 @@ const sort = arr => {
 console.log(sort(arr))  // [1, 5, 9, 22, 32, 43]；
 ```
 
-
-
 ### 数组中的最大差值
 
 ```
@@ -118,8 +110,6 @@ const difference = arr => {
 }
 console.log(difference(arr))  // 74
 ```
-
-
 
 ### 返回元素出现的位置
 
@@ -140,13 +130,9 @@ console.log(indices);
 // [0, 2, 4]
 ```
 
-
-
 ### 对比两个值是否相等：
 
 console.log(Object.is(NaN,NaN));
-
-
 
 ### 类的定义
 
@@ -162,8 +148,6 @@ class Parent {
 let p = new Parent('zfpx');
 console.log(p.getName())
 ```
-
-
 
 ### 静态属性通过类来调用
 
@@ -182,8 +166,6 @@ class Parent {
 }
 Parent.a();
 ```
-
-
 
 ### 类的继承
 
@@ -212,15 +194,11 @@ let c = new Child('zfpx','9');
 console.log(c.getName())
 ```
 
-
-
 ### js实现trim清除空格
 
 	function trim(str){	
 	  return str.replace(/^\s*|\s*$/g,'');
 	}
-
-
 
 ### new操作符具体干了什么？
 
@@ -230,13 +208,10 @@ console.log(c.getName())
 
 （3）新创建的对象由 this 所引用，并且最后隐式的返回 this 。
 
-
-
 ### 闭包
 
-闭包就是能够读取其他函数内部变量的函数。
-
 ```
+闭包就是能够读取其他函数内部变量的函数。
 function a(x){
        var tem=3;
       function b(y){
@@ -255,7 +230,7 @@ for(var i=0;i<10;i++){
 
 ```
 
-# 程序输出：
+### 程序输出
 
 ```
 function fun(n,o) {
@@ -396,8 +371,6 @@ let set = new Set([9,2,2,3,1,1]),
 };
 ```
 
-
-
 ###正则表达
 
 1、var patt1=new RegExp("e");
@@ -428,8 +401,6 @@ while((match = reg.exec(str)) !== null) {
 console.log(num) // 5
 ```
 
-
-
 ### js千分位分割
 
 ```
@@ -437,8 +408,6 @@ console.log(num) // 5
         return num && num.toString().replace(/(^|\s)\d+/g, (m) => m.replace(/(?=(?!\b)(\d{3})+$)/g, ','))
     }
 ```
-
-
 
 ### this、原型、原型链、继承和引用
 
@@ -475,8 +444,6 @@ child1.show();//5 [1, 2, 1, 11, 12] 5
 child2.show();//6 [1, 2, 1, 11, 12] 5
 ```
 
-
-
 ### promise
 
 - pending: 初始状态, 非 fulfilled 或 rejected.
@@ -497,8 +464,6 @@ promise.then(function (value) {
     // failure
 })
 ```
-
-
 
 ### 比较typeof与instanceof？
 
