--- a/js/面试记录.md
+++ b/js/面试记录.md
@@ -1,3 +1,50 @@
+### 正则表达
+
+```
+1、var patt1=new RegExp("e");
+document.write(patt1.test("The best things in life are free"));   //true
+2、var patt1=new RegExp("e");
+ document.write(patt1.exec("The best things in life are free"));   //e
+3、secrch：返回匹配成功的索引
+'abc'.search(/abc/) // 0
+'abc'.search(/c/) // 2
+
+匹配符说明
+g： 表示全局（global）模式，即模式将被应用于所有字符串，而非在发现第一个匹配项时立即停止；
+i ： 表示不区分大小写（case-insensitive）模式，即在确定匹配项时忽略模式与字符串的大小写；
+m：表示多行（multiline）模式，即在到达一行文本末尾时还会继续查找下一行中是否存在与模式匹配的项。
+
+() 的作用是提取匹配的字符串。表达式中有几个()就会得到几个相应的匹配字符串。比如 (\s+) 表示连续空格的字符串。
+[] 是定义匹配的字符范围。比如 [a-zA-Z0-9] 表示字符文本要匹配英文字符和数字。
+{} 一般用来表示匹配的长度，比如 \d{3} 表示匹配三个数字，\d{1,3} 表示匹配1~3个数字，\d{3,} 表示匹配3个以上数字
+
+^ 匹配一个字符串的开头，比如 (^a) 就是匹配以字母a开头的字符串
+$ 匹配一个字符串的结尾,比如 (b$) 就是匹配以字母b结尾的字符串
+^ 还有另个一个作用就是取反，比如[^xyz] 表示匹配的字符串不包含xyz
+
+\d 匹配一个非负整数， 等价于 [0-9]
+\s 匹配一个空白字符
+\w 匹配一个英文字母或数字，等价于[0-9a-zA-Z]
+.   匹配除换行符以外的任意字符，等价于[^\n]
+
+* 表示匹配前面元素0次或多次，比如 (\s*) 就是匹配0个或多个空格
++ 表示匹配前面元素1次或多次，比如 (\d+) 就是匹配由至少1个整数组成的字符串
+? 表示匹配前面元素0次或1次，相当于{0,1} ，比如(\w?) 就是匹配最多由1个字母或数字组成的字符串 
+
+$1-$9 存放着正则表达式中最近的9个正则表达式的提取的结果，这些结果按照子匹配的出现顺序依次排列。基本语法是：RegExp.$n ，这些属性是静态的，除了replace中的第二个参数可以省略 RegExp 之外，其他地方使用都要加上 RegExp 
+eg：
+//使用RegExp访问
+/(\d+)-(\d+)-(\d+)/.test("2016-03-26")
+  
+RegExp.$1  // 2016
+RegExp.$2  // 03
+RegExp.$3  // 26
+ 
+//在replace中使用
+"2016-03-26".replace(/(\d+)-(\d+)-(\d+)/,"$1年$2月$3日") 
+// 2016年03月26日
+```
+
 ### js实现一个持续动画
 
 ```
@@ -371,23 +418,6 @@ let set = new Set([9,2,2,3,1,1]),
 };
 ```
 
-###正则表达
-
-1、var patt1=new RegExp("e");
-
-document.write(patt1.test("The best things in life are free"));   //true
-
-2、var patt1=new RegExp("e");
-
- document.write(patt1.exec("The best things in life are free"));   //e
-
-3、secrch：返回匹配成功的索引
-
-```
-'abc'.search(/abc/) // 0
-'abc'.search(/c/) // 2
-```
-
 ### 计算元素出现次数
 
 ```
@@ -549,9 +579,21 @@ function quickSort(arr) {
 }
 ```
 
+### 提取 url 中的参数名和参数值，生成一个key/value 的对象
 
-
-
+```
+function getUrlParamObj(){
+    var obj = {};
+    //获取url的参数部分
+    var params = window.location.search.substr(1);
+    //[^&=]+ 表示不含&或=的连续字符，加上()就是提取对应字符串
+    params.replace(/([^&=]+)=([^&=]*)/gi,function(rs,$1,$2){
+    //decodeURIComponent() 函数可对 encodeURIComponent() 函数编码的 URI 进行解码。
+        obj[$1] =  decodeURIComponent($2);
+    });
+    return obj;
+}
+```
 
 
 
