--- a/js/面试记录.md
+++ b/js/面试记录.md
@@ -1,4 +1,4 @@
-### 正则表达
+### 正则表达说明
 
 ```
 1、var patt1=new RegExp("e");
@@ -85,39 +85,22 @@ function render() {
 ### js 统计一个字符串出现频率最高的字母/数字
 
 ```
-      let str = 'asdfghjklaqwertyuiopiaia';
-
+let str = 'asdfghjklaqwertyuiopiaia';
 const strChar = str => {
-
 let string = [...str],
-
 maxValue = '',
-
       obj = {},
-
         max = 0;
-
     string.map(value => {
-
         obj[value] = obj[value] == undefined ? 1 : obj[value] + 1
-
         if (obj[value] > max) {
-
             max = obj[value]
-
             maxValue = value
-
         }
-
     })
-
 return maxValue;
-
 }
-
 console.log(strChar(str))    // a
-
-
 
 ```
 
@@ -266,15 +249,10 @@ function a(x){
      }
 }
 for(var i=0;i<10;i++){
-
 	(function(i){
-
 	alert(i);
-
 })(i)
-
 }
-
 ```
 
 ### 程序输出
@@ -523,59 +501,34 @@ let tempArr = [1,2,3,4,5,'6',7,'8','a','b','z'].sort(function(){
 
 ```
 // 快排的大体思路是这样的,
-
 // 找个中位值,从原数组切割出来,
-
 // 剩下的作为两个数组,每次都去比较;
-
 // 直到递归的结果出来, 平均复杂度O(nlog n)
-
 function quickSort(arr) {
-
   //如果数组长度<=1,则直接返回
-
   if (arr.length <= 1) {
-
     return arr;
-
   }
 
   // 中间位(基准)取长度的一半向下取整
-
   var pivotIndex = Math.floor(arr.length / 2);
-
   //把中间位从原数组切割出来, splice 会改变原数组!!!!
-
   var pivot = arr.splice(pivotIndex, 1)[0];
-
   //定义两个空数组来存放比对后的值
-
   var left = [];
-
   var right = [];
-
   //比基准小的放在left，比基准大的放在right
-
   for (var i = 0 , j = arr.length; i < j; i++) {
-
     if (arr[i] <= pivot) {
-
       left.push(arr[i]);
-
     } else {
-
       right.push(arr[i]);
-
     }
-
   }
 
   //递归下去  arr = [ left , pivot , right]
-
   // 怎么个递归法,就是比对后的数组还是会重复之前的取基准再切开比较..直到最后没有可以切了
-
   return quickSort(left).concat([pivot], quickSort(right));
-
 }
 ```
 
