--- a/js/数组&&字符串.md
+++ b/js/数组&&字符串.md
@@ -1,3 +1,37 @@
+```
+常用方法：
+数组拼接
+const ArrayConcat = (arr, ...args) => [].concat(arr, ...args);
+
+随机获取数组的一个元素
+const sample = arr => arr[Math.floor(Math.random() * arr.length)];
+
+求数组平均数
+const average = arr => arr.reduce((acc, val) => acc + val, 0) / arr.length;
+
+平铺多维数组
+const deepFlatten = arr => [].concat(...arr.map(v => Array.isArray(v) ? deepFlatten(v) : v));
+
+获取数组最大值
+const arrayMax = arr => Math.max(...arr);
+
+随机排列数组
+const shuffle = arr => arr.sort(() => Math.random() - 0.5);
+
+获取数组交集
+const similarity = (arr, values) => arr.filter(v => values.includes(v));
+//similarity([1,2,3], [1,2,4]) -> [1,2]
+
+数组求和
+const sum = arr => arr.reduce((acc, val) => acc + val, 0);
+
+删除元素最后一个数组
+const tail = arr => arr.length > 1 ? arr.slice(1) : arr;
+
+数组去重
+const unique = arr => [...new Set(arr)];
+```
+
 ### 判断是否数组
 
 ```
