--- a/js/菜鸟专用.md
+++ b/js/菜鸟专用.md
@@ -9,32 +9,31 @@
 
 ### 当来自服务器的图片出错时替代方法
 
-//方法1：
-$("img").error(function() {
-
-        $("img").replaceWith('img src="a.png"');
+      //方法1：
+    $("img").error(function() {
+     
+       $("img").replaceWith('img src="a.png"');
     })
     //方法2： 
     //<img src = "图片地址" onerror = "this.style.display='none'" >
     //img src = "图片地址" onerror = "this.src='默认图片地址'" >
 
-
-
 ### 能将具有length属性的对象转成数组
 
+```
 Array.prototype.slice.call(arguments)
-
-
+ES6：
+Array.form();
+```
 
 ### js单例模式：
 
-1、使用命名空间
-
+    1、使用命名空间
     var show = {
     a: function() {}
     a: function() {}
     };
-方法封装
+    方法封装
     (function(w) {
     function show(tar) {
         this.setting = {};
@@ -58,7 +57,7 @@ Array.prototype.slice.call(arguments)
     show("111");
     
     show("2222");
-    
+
 ### 模块化封装
 
     var page = {
@@ -79,9 +78,7 @@ Array.prototype.slice.call(arguments)
     $(function() {
     page.init()
     })
-### 2、使用闭包封装私有变量
-
-
+### 使用闭包封装私有变量
 
     var show = (function() {
     var a = 1,
@@ -94,7 +91,7 @@ Array.prototype.slice.call(arguments)
     })()
     
     console.log(show.show1());
-    
+
 ### js垂直居中
 
     $("div").css({
@@ -120,8 +117,6 @@ Array.prototype.slice.call(arguments)
 
 ### 解决音乐自动播放
 
-
-
     function audioAutoPlay(id) {
     var audio = document.getElementById(id),
         play = function() {
@@ -141,12 +136,10 @@ Array.prototype.slice.call(arguments)
     }
     
     audioAutoPlay('Jaudio');
-    
+
 ### 判断是ios还是安卓跳转不同的应用商店
 
 
-
-    
     var u = navigator.userAgent,
     app = navigator.appVersion;
     var isAndroid = u.indexOf('Android') > -1 || u.indexOf('Linux') > -1;
@@ -165,7 +158,7 @@ Array.prototype.slice.call(arguments)
     //  换成自己的appstore地址
     window.location.href = 'https://itunes.apple.com/app/apple-store/xxxxxx'; // 跳AppStore下载地址
     }
-    
+
 ### 二维数组进行合并
 
     var arr = [
@@ -176,40 +169,14 @@ Array.prototype.slice.call(arguments)
     function flatten(arr) {
     return [].concat(...arr)
     }
-    
     console.log(flatten(arr)); //[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
-    
-### 去重
 
-借助 Map 数据结构
-
-
-    function unique(arr) {
-    const seen = new Map()
-    return arr.filter((v) = & gt; !seen.has(v) & amp; & amp; seen.set(v, 1));
-    }
-
-//借助 Set 数据结构
-
-    function unique(arr) {
-    return Array.from(new Set(arr)) //或 return [...new Set(arr)]
-    }
-    unique([1, 2, 3, 4, 3, 2, '1', 'a', 'b', 'a']);
-    //[1, 2, 3, 4, 1, a, b]
-
-
-正反对比
-
-
+### 正反对比
 
     const button = document.querySelector('.like-btn')
-    
     const buttonText = button.querySelector('.like-text')
-    
     let isLiked = false
-    
     button.addEventListener('click', () => {
-    
     isLiked = !isLiked
     if (isLiked) {
         buttonText.innerHTML = '取消'
@@ -217,53 +184,6 @@ Array.prototype.slice.call(arguments)
         buttonText.innerHTML = '点赞'
     }
     }, false)
-
-
-
-
-## ES6实现方法
-
-### 数组拼接
-
-const ArrayConcat = (arr, ...args) => [].concat(arr, ...args);
-
-### 随机获取数组的一个元素
-
-const sample = arr => arr[Math.floor(Math.random() * arr.length)];
-
-### 求数组平均数
-
-const average = arr => arr.reduce((acc, val) => acc + val, 0) / arr.length;
-
-### 平铺多维数组
-
-const deepFlatten = arr => [].concat(...arr.map(v => Array.isArray(v) ? deepFlatten(v) : v));
-
-### 获取数组最大值
-
-const arrayMax = arr => Math.max(...arr);
-
-### 随机排列数组
-
-const shuffle = arr => arr.sort(() => Math.random() - 0.5);
-
-### 获取数组交集
-
-const similarity = (arr, values) => arr.filter(v => values.includes(v));
-//similarity([1,2,3], [1,2,4]) -> [1,2]
-
-### 数组求和
-
-const sum = arr => arr.reduce((acc, val) => acc + val, 0);
-
-### 删除元素最后一个数组
-
-const tail = arr => arr.length > 1 ? arr.slice(1) : arr;
-
-### 数组去重
-
-const unique = arr => [...new Set(arr)];
-
 ### 获取滚动条位置
 
     const getScrollPos = (el = window) =>
@@ -292,29 +212,34 @@ const unique = arr => [...new Set(arr)];
         ((left > 0 && left < innerWidth) || (right > 0 && right < innerWidth)) :
         top >= 0 && left >= 0 && bottom <= innerHeight && right <= innerWidth;
         };
+```
 // 举个例子，有一个 100x100 可视窗口， 和一个 10x10px 元素定位在 {top: -1, left: 0, bottom: 9, right: 10}
+
 // elementIsVisibleInViewport(el) -> false (not fully visible)
+
 // elementIsVisibleInViewport(el, true) -> true (partially visible)
 
-
+```
 
 ### 获取两个日期的天数差
 
+```
 const getDaysDiffBetweenDates = (dateInitial, dateFinal) => (dateFinal - dateInitial) / (1000 * 3600 * 24);
+```
 
 ### 截断字符串
 
-const truncate = (str, num) =>
-
+    const truncate = (str, num) =>
     str.length > num ? str.slice(0, num > 3 ? num - 3 : num) + '...' : str;
 ### 指定范围随机生成数字
 
+```
 const randomInRange = (min, max) => Math.random() * (max - min) + min;
+```
 
 ### 网址参数
 
-const getUrlParameters = url =>
-
+    const getUrlParameters = url =>
     url.match(/([^?=&]+)(=([^&]*))/g).reduce(
         (a, v) => (a[v.slice(0, v.indexOf('='))] = v.slice(v.indexOf('=') + 1), a), {}
     );
@@ -328,25 +253,31 @@ const getUrlParameters = url =>
 
 ### 数字验证
 
+```
 const validateNumber = n => !isNaN(parseFloat(n)) && isFinite(n) && Number(n) == n;
+```
 
 ### 计算元素出现次数
 
+```
 const countOccurrences = (arr, value) => arr.reduce((a, v) => v === value ? a + 1 : a + 0, 0);
 // countOccurrences([1,1,2,1,2,3], 1) -> 3
+```
 
 ### 过滤不唯一元素
 
+```
 const filterNonUnique = arr => arr.filter(i => arr.indexOf(i) === arr.lastIndexOf(i));
 // filterNonUnique([1,2,2,3,4,4,5]) -> [1,3,5]
+```
 
 ### socket前端代码示例
 
-//<div>user input：<input type="text"></div>
-//<script src="./socket.io.js"></script>
-var socket = io('http://www.domain2.com:8080');
-
-// 连接成功处理
+    //<div>user input：<input type="text"></div>
+    //<script src="./socket.io.js"></script>
+    
+    var socket = io('http://www.domain2.com:8080');
+    // 连接成功处理
     socket.on('connect', function() {
     // 监听服务端消息
     socket.on('message', function(msg) {
@@ -383,9 +314,8 @@ var socket = io('http://www.domain2.com:8080');
     }
 ### 改进
 
-// 定义一个生成单例对象的函数：
 
-
+    // 定义一个生成单例对象的函数：
     var getSingle = function(fn) {
     var instance;
     return function() {
