--- a/js/面试记录.md
+++ b/js/面试记录.md
@@ -9,6 +9,13 @@ document.write(patt1.test("The best things in life are free"));   //true
 'abc'.search(/abc/) // 0
 'abc'.search(/c/) // 2
 
+匹配量的：* + ? {n} {n,} {n,m} .
+匹配位置的：^ $
+匹配并且需要支持分组的时候需要括号来包裹：(匹配的模式)
+匹配条件的：|
+匹配集合的：[]
+匹配非集合的：[^]
+
 匹配符说明
 g： 表示全局（global）模式，即模式将被应用于所有字符串，而非在发现第一个匹配项时立即停止；
 i ： 表示不区分大小写（case-insensitive）模式，即在确定匹配项时忽略模式与字符串的大小写；
@@ -556,7 +563,19 @@ function getUrlParamObj(){
 }
 ```
 
+### 手机号中间加
 
+```
+function telFormat(tel){
+    tel = String(tel);
+    //方式一
+    return tel.replace(/(\d{3})(\d{4})(\d{4})/,function (rs,$1,$2,$3){
+       return $1+"****"+$3
+    });
+    //方式二
+    return tel.replace(/(\d{3})(\d{4})(\d{4})/,"$1****$3");
+}	
+```
 
 
 
