--- a/js/面试记录.md
+++ b/js/面试记录.md
@@ -419,6 +419,22 @@ while((match = reg.exec(str)) !== null) {
     num++
 }
 console.log(num) // 5
+
+
+ var str="helloworld";
+var arr=str.split("")
+  .sort()
+  .join("")
+  .match(/([a-z])\1*/g)
+  .sort(function(a,b){
+return b.length-a.length; })
+console.log("出现最多的是: "+arr[0][0]
+  +"共"+arr[0].length+"次");
+var hash={};
+  arr.forEach(function(val){
+    hash[val[0]]=val.length;
+  });
+  console.dir(hash);
 ```
 
 ### js千分位分割
