--- a/js/面试记录.md
+++ b/js/面试记录.md
@@ -593,7 +593,32 @@ function telFormat(tel){
 }	
 ```
 
+### 1-2+3-4+5-6…N用参数写一个计算方法？
 
+```
+function num(n){
+ var totle = 0;
+ for(var i=0;i<n;i++){
+   if(i%2===0){
+     totle=totle+i
+   }else{
+     totle= totle-1
+   }
+ }
+ return totle;
+}
+console.log(num(10));
+```
+
+### 用于记录字符串在字母出现次数
+
+```
+var result = 'abcawab'.split('').reduce(function(res, cur){
+  res[cur] ? res[cur]++ : (res[cur] = 1);
+  return res;
+},{});
+log(result);//{a: 3, b: 2, c: 1, w: 1}
+```
 
 
 
