--- a/js/数组&&字符串.md
+++ b/js/数组&&字符串.md
@@ -94,6 +94,7 @@ export default const OneTrueArr=(arrs)=>{
 
 ### every
 
+```
 array.every(function(value,index){});
 
 - 根据当前回调函数的返回值决定是否进行下一次循环
@@ -101,19 +102,16 @@ array.every(function(value,index){});
   - 回调函数的返回值为true，继续循环
   - 返回值是false，停止循环
 - 第一个参数是数组中的每一个元素 第二个参数表示索引号
-
-
+```
 
 #### some(返回布尔)
 
+```
 array.some(callback[,thisArg])
-
 - callback 被调用时传入三个参数：元素的值，元素的索引，被遍历的数组
-- *thisArg参数,将会把它传给被调用的callback，作为this 值。否则，在非严格模式下将会是全局对象，严格模式下是undefined*
+- thisArg参数,将会把它传给被调用的callback，作为this 值。否则，在非严格模式下将会是全局对象，严格模式下是undefined
 - 数组中如果有一个满足条件，返回true，否则返回false
-
-
-
+```
 
 
 
@@ -121,43 +119,63 @@ array.some(callback[,thisArg])
 
 ### chartAt()
 
+```
 用来获取指定位置的字符串；
+```
 
 ### sub()
 
+```
 把字符串显示为下标
+```
 
 ### indexOf()
 
+```
 indexOf()用来检索指定的字符串值在字符串中首次出现的位置。它可以接收两个参数，第一个参数表示要查找的子字符串，第二个参数表示查找的开始位置，省略的话则从开始位置进行检索。
+```
 
 ### lastindexOf()
 
+```
 返回的是一个指定的子字符串值最后出现的位置，其检索顺序是从后向前。
+```
 
 ### search()
 
+```
 search()方法用于检索字符串中指定的子字符串，或检索与正则表达式相匹配的子字符串。它会返回第一个匹配的子字符串的起始位置，如果没有匹配的，则返回-1
+```
 
 ### match()
 
+```
 match()方法可在字符串内检索指定的值，或找到一个或多个正则表达式的匹配。如果参数中传入的是子字符串或是没有进行全局匹配的正则表达式，那么match()方法会从开始位置执行一次匹配，如果没有匹配到结果，则返回null。否则则会返回一个数组，该数组的第0个元素存放的是匹配文本，除此之外，返回的数组还含有两个对象属性index和input，分别表示匹配文本的起始字符索引和stringObject 的引用(即原字符串)。
+```
 
 ### substring()
 
+```
 substring()是最常用到的字符串截取方法，它可以接收两个参数(参数不能为负值)，分别是要截取的开始位置和结束位置，它将返回一个新的字符串，其内容是从start处到end-1处的所有字符。若结束参数(end)省略，则表示从start位置一直截取到最后
+```
 
 ### slice()
 
+```
 slice()方法与substring()方法非常类似，它传入的两个参数也分别对应着开始位置和结束位置。而区别在于，slice()中的参数可以为负值，如果参数是负数，则该参数规定的是从字符串的尾部开始算起的位置。也就是说，-1 指字符串的最后一个字符。
+```
 
 ### substr()
 
+```
 substr()方法可在字符串中抽取从start下标开始的指定数目的字符。其返回值为一个字符串，包含从 stringObject的start（包括start所指的字符）处开始的length个字符。如果没有指定 length，那么返回的字符串包含从start到stringObject的结尾的字符。另外如果start为负数，则表示从字符串尾部开始算起。
+```
 
 ### replace()
 
+```
 replace()方法用来进行字符串替换操作，它可以接收两个参数，前者为被替换的子字符串（可以是正则），后者为用来替换的文本。如果第一个参数传入的是子字符串或是没有进行全局匹配的正则表达式，那么replace()方法将只进行一次替换（即替换最前面的），返回经过一次替换后的结果字符串。如果第一个参数传入的全局匹配的正则表达式，那么replace()将会对符合条件的子字符串进行多次替换，最后返回经过多次替换的结果字符串。
+```
 
 ### split()
 
@@ -206,47 +224,95 @@ console.log(str.split(/\d/)); //返回["a", "b", "c", "d", "e"]
 
 ## 常用数组方法
 
+```
+改变数组的方法:
+- splice
+- shift / pop
+- unshift / push
+- reverse / sort
+- copyWithin / fill
+
+不改变数组的方法:
+indexOf / lastIndexOf
+toString / join
+concat / slice
+some / every / filter
+map / forEach
+reduce / reduceRight
+keys / values / entries
+find / findIndex / includes
+
+返回新数组的方法 concat / slice / map
+返回iterator对象的方法 keys / values / entries
+```
+
+### reduce()
+
+```
+reduce() 方法接收一个函数作为累加器（accumulator），数组中的每个值（从左到右）开始合并，最终为一个值。
+
+reduce() 函数接收2个参数(M: 必填, O: 可选)：
+
+(M) 回调reducer 函数 处理先前的结算结果和下一个元素直到序列结束。
+(O) 初值 作为第一次调用回调时的第一个参数。
+rr.reduce(function(prev, cur, index, arr) {});
+
+prev: 第一项的值或者上一次叠加的结果值
+cur: 当前会参与叠加的项
+index： 当前值的索引
+arr: 数组本身
+```
+
+### splice
+
+```
+splice 方法向/从数组中添加/删除项目，然后返回被删除的项目组成的新数组 会改变原有数组
+arrayObject.splice(index,howmany,items,...)
+index 起始位置，可以是负数
+howmany 要删除的个数，0为不删除
+items 要添加的元素
+```
+
+### forEach()
+
+```
+[].forEach(function(value, index, arr){}, context)
+循环遍历数组中的每一个元素，处理函数中的参数依次为：当前元素、当前元素索引、原数组
+forEach的第二个参数，可以指定处理函数中this的指向
+```
+
 ### map()
 
-**var new_array = array.map (function(value,index,array){ },thisArg);**
-
+```
+var new_array = array.map (function(value,index,array){ },thisArg);
 - 遍历数组，能够将数组转化为一个新的数组，新数组的值由map方法回调函数的返回值决定。
-
 - 回调函数的第一个参数是数组的值，第二个参数是索引,第三个参数是被调用的数组。thisArg可选，执行 callback函数时 使用的this值。
-
 - 如果 thisArg 参数有值，则每次 callback 函数被调用的时候，this都会指向thisArg参数上的这个对象。如果省略了 thisArg参数,或者赋值为null或undefined，则 this 指向全局对象 。
-
 - 返回值是新的数组
-
   eg: 
-
   let numbers = [1, 5, 10, 15];
-
    let roots = numbers.map(function(x) {     
-
    return x * 2;   
-
   });
-
-  ```
   var str = '12345';
-  Array.prototype.map.call(str, function(x) {
-    return x;
-  }).reverse().join(''); 
+Array.prototype.map.call(str, function(x) {
+  return x;
+}).reverse().join(''); 
 
-  // Output: '54321'
-  ```
+// Output: '54321'
 
-
+```
 
 ### forEach
 
+```
 array.forEach(function(value,index,array){}，thisArg);
 
 - 遍历数组，跑起来就停不下来，调用就会遍历整个数组，无法中断循环
 - 回调函数的第一个参数表示数组中的每一个元素，第二个表示索引号,第三个表示正在操作的数组，可选
 - 返回值undefined
-- ​
+
+```
 
 ### every
 
@@ -273,13 +339,15 @@ array.forEach(function(value,index,array){}，thisArg);
 
 ### filter
 
-**var new_array = arr.filter(callback[, thisArg])**
+```
+var new_array = arr.filter(callback[, thisArg])
 
 - 判断数组中的每一项是否都满足条件，所有满足条件的则返回新数组
 - callback 用来测试数组的每个元素的函数。调用时使用参数 (element, index, array)
   返回true表示保留该元素（通过测试），false则不保留
 - thisArg 可选，执行callback时的用于this的值
 
+```
 
 
 ### 扩展运算符
