--- a/js/菜鸟专用.md
+++ b/js/菜鸟专用.md
@@ -334,3 +334,83 @@ const filterNonUnique = arr => arr.filter(i => arr.indexOf(i) === arr.lastIndexO
     var popupInstance = popupFactory();
     popupInstance.style.display = 'block';
     }
+### 表单自动切换至下一焦点
+
+```
+(function(){
+function tabForward(event){
+event = EventUtil.getEvent(event);
+var target = EventUtil.getTarget(event);
+if (target.value.length == target.maxLength){
+var form = target.form;
+for (var i=0, len=form.elements.length; i < len; i++) {
+if (form.elements[i] == target) {
+if (form.elements[i+1]){
+form.elements[i+1].focus();
+}
+return;
+}
+  }
+	}
+		}
+var textbox1 = document.getElementById("txtTel1");
+var textbox2 = document.getElementById("txtTel2");
+var textbox3 = document.getElementById("txtTel3");
+EventUtil.addHandler(textbox1, "keyup", tabForward);
+EventUtil.addHandler(textbox2, "keyup", tabForward);
+EventUtil.addHandler(textbox3, "keyup", tabForward);
+})();
+```
+
+### cookie
+
+```
+var CookieUtil = {
+get: function (name){
+var cookieName = encodeURIComponent(name) + "=",
+cookieStart = document.cookie.indexOf(cookieName),
+cookieValue = null;
+if (cookieStart > -1){
+var cookieEnd = document.cookie.indexOf(";", cookieStart);
+if (cookieEnd == -1){
+cookieEnd = document.cookie.length;
+}
+cookieValue = decodeURIComponent(document.cookie.substring(cookieStart
++ cookieName.length, cookieEnd));
+}
+return cookieValue;
+},
+set: function (name, value, expires, path, domain, secure) {
+var cookieText = encodeURIComponent(name) + "=" +
+encodeURIComponent(value);
+if (expires instanceof Date) {
+cookieText += "; expires=" + expires.toGMTString();
+}
+if (path) {
+cookieText += "; path=" + path;
+}
+if (domain) {
+cookieText += "; domain=" + domain;
+}
+if (secure) {
+cookieText += "; secure";
+}
+document.cookie = cookieText;
+},
+unset: function (name, path, domain, secure){
+this.set(name, "", new Date(0), path, domain, secure);
+}
+};
+
+
+/设置 cookie
+CookieUtil.set("name", "Nicholas");
+CookieUtil.set("book", "Professional JavaScript");
+//读取 cookie 的值
+alert(CookieUtil.get("name")); //"Nicholas"
+alert(CookieUtil.get("book")); //"Professional JavaScript"
+//删除 cookie
+CookieUtil.unset("name");
+CookieUtil.unset("book");
+```
+
