--- a/js/菜鸟专用.md
+++ b/js/菜鸟专用.md
@@ -412,5 +412,45 @@ alert(CookieUtil.get("book")); //"Professional JavaScript"
 //删除 cookie
 CookieUtil.unset("name");
 CookieUtil.unset("book");
+//设置 cookie，包括它的路径、域、失效日期
+CookieUtil.set("name", "Nicholas", "/books/projs/", "www.wrox.com",
+new Date("January 1, 2010"));
+//删除刚刚设置的 cookie
+CookieUtil.unset("name", "/books/projs/", "www.wrox.com");
+//设置安全的 cookie
+CookieUtil.set("name", "Nicholas", null, null, null, true);
+```
+
+### 节流函数
+
+```
+    function throFun() {
+        console.log('执行真正的函数')
+    }
+    var thro = throttle(throFun, 1000);
+    box.addEventListener('click', function() {
+        thro();
+    })
+
+    function throttle(func, delay) {
+        var prev = Date.now();
+        return function() {
+            console.log('被触发')
+            var context = this;
+            var args = arguments;
+            var now = Date.now();
+            if (now - prev >= delay) {
+                func.apply(context, args);
+                prev = Date.now();
+            }
+        }
+    }
+```
+
+```
+宏任务（macro-task）：包括js整体代码，setTimeout，setInterval，setImmediate ，I/O, UI renderder等
+微任务（micro-task）：包括Promise，Object.observe，process.nextTick，MutationObserver等
+调用栈：js被加载进来之后，会从上至下读取代码，同步代码被立即执行，而异步代码被加入事件队列中
+事件队列：一些没有被立即执行的代码被添加到事件队列中，队列是一种先进先出的数据结构，也就是说，先加入事件队列的任务会被优先执行
 ```
 
