--- a/js/菜鸟专用.md
+++ b/js/菜鸟专用.md
@@ -454,3 +454,41 @@ CookieUtil.set("name", "Nicholas", null, null, null, true);
 事件队列：一些没有被立即执行的代码被添加到事件队列中，队列是一种先进先出的数据结构，也就是说，先加入事件队列的任务会被优先执行
 ```
 
+### 常用写法
+
+```
+// 好的写法 - 拆分应用逻辑
+var MyApplication = {
+  handleClick: function (event) {
+    this.showPopup(event);
+  },
+
+  showPopup: function (event) {
+    var pop = document.getElementById('popup');
+    popup.style.left = event.clientX + 'px';
+    popup.style.top = event.clientY + 'px';
+    popup.className = 'reveal';
+  }
+};
+
+addListener(element, 'click', function (event) {
+  MyApplication.handleClick(event);
+});
+```
+
+### 弹窗之后禁止后面页面滚动
+
+```
+// 弹出时
+$('body').css({
+position: 'fixed',
+top: -document.body.scrollTop + 'px'
+});
+// 隐藏式
+var top = -document.body.style.top.replace('px');
+$('body').css({
+position: static
+});
+window.scrollTo(0, top);
+```
+
