--- a/js/菜鸟专用.md
+++ b/js/菜鸟专用.md
@@ -492,3 +492,18 @@ position: static
 window.scrollTo(0, top);
 ```
 
+### 输入手机号码空格
+
+```
+    let value = e.detail.value;
+    value = value.replace(/[\u4E00-\u9FA5`~!@#$%^&*()_+<>?:"{},.\/;'[\]\-\sa-zA-Z]*/g, "");
+    let result = [];
+    for (let i = 0; i < value.length; i++) {
+      if (i == 3 || i == 7) {
+        result.push(" ", value.charAt(i));
+      }
+      else {
+        result.push(value.charAt(i));
+      }
+```
+
