--- a/js/菜鸟专用.md
+++ b/js/菜鸟专用.md
@@ -507,3 +507,11 @@ window.scrollTo(0, top);
       }
 ```
 
+### 移动端click点击清除300ms延迟
+
+```
+import FastClick from'fastclick'window.addEventListener('load', () => {
+    FastClick.attach(document.body)
+})
+```
+
