--- a/js/菜鸟专用.md
+++ b/js/菜鸟专用.md
@@ -515,3 +515,16 @@ import FastClick from'fastclick'window.addEventListener('load', () => {
 })
 ```
 
+### undefined和null
+
+```
+undefind表示无，转为数值为nan
+1、变量声明了，但没有赋值
+2、调用函数，提供的参数没有提供，该参数为undefine
+3、对象没有赋值的属性
+4、函数没有返回值
+null表示无，默认返回0
+作为函数的参数，该函数的参数不是对象
+作为对象原型链的重点
+```
+
