--- a/js/列表分页.md
+++ b/js/列表分页.md
@@ -83,3 +83,19 @@ getData(curPage);
 }
 }
 ```
+加载列表滚动判断
+
+```
+let baseHeight = this.scrollview == window ? document.body.offsetHeight : this.scrollview.offsetHeight
+                let moreHeight = this.scrollview == window ? document.body.scrollHeight : this.scrollview.scrollHeight;
+                let scrollTop = this.scrollview == window ? document.body.scrollTop : this.scrollview.scrollTop
+
+                if (baseHeight + scrollTop + this.distance > moreHeight) {
+                    this.isLoading = true;
+                    this.onInfinite()
+                }
+                
+mount触发： this.scrollview.addEventListener('scroll', this.scrollHandler, false);
+
+```
+
