--- a/python知识总结/爬虫知识点.md
+++ b/python知识总结/爬虫知识点.md
@@ -7,5 +7,9 @@
 eg:print(response.xpath("\\title"));
 放置本地资源：view(response)
 配置文件uft8：FEED_EXPORT_ENCODING = 'utf-8'
+保存文件：scrapy crawl jobs -o a.json
+
+xpath获取方法
+"//a/@href"
 ```
 
